<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:padding="16dp">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="24sp" />
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/settingPage_changeUserNameButton"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_alignParentRight="true"
			android:text="ChangeName"
			android:textColor="#48f" />
		<TextView
			android:id="@+id/settingPage_userNameTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_toLeftOf="@id/settingPage_changeUserNameButton"
			android:textSize="36sp" />
	</RelativeLayout>
</LinearLayout>